# Story

./: .gitignore  CMakeLists.txt  push  r
TestGame/: metadata
TestGame/characters/: B.chr  Man.chr
config/: values.cfg
engine/: CMakeLists.txt
engine/include/: ChoiceNode.h  DialogueNode.h  EndNode.h  Engine.h  JumpNode.h  Node.h
engine/src/: ChoiceNode.cpp  DialogueNode.cpp  EndNode.cpp  Engine.cpp  JumpNode.cpp  Node.cpp
filesystem/: CMakeLists.txt
filesystem/include/: FileExplorer.h
filesystem/src/: FileExplorer.cpp
include/: Printer.h  Random.h
src/: Game.cpp  Printer.cpp  Random.cpp
